<resources>
    <string name="app_name">Simple USB Terminal</string>
</resources>
