...
          onPress={() => setOpen('flowControl')}
        />

        <TouchableOpacity
          style={styles.connectBtn}
          onPress={() => onConnect(settings)}>
          <Text style={styles.connectText}>Connect</Text>
        </TouchableOpacity>
      </ScrollView>

      <SingleChoiceDialog
        visible={open === 'baudRate'}
        title="Baud rate"
...
